--- a/package.json
+++ b/package.json
@@ -8,19 +8,30 @@
     "build_backend": "vite build -c vite.config.prod.backend.ts",
     "dev": "node --watch -r ts-node/register -r tsconfig-paths/register src/backend/app.ts",
     "build": "tsc && npm run prepare_dist && npm run build_backend && npm run build_frontend",
-    "run_production": "cd dist && npm run server"
+    "run_production": "cd dist && npm run server",
+    "test": "vitest",
+    "test_ui": "vitest --ui",
+    "coverage": "vitest run --coverage"
   },
   "devDependencies": {
+    "@happy-dom/global-registrator": "^18.0.1",
     "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.3",
+    "@types/jsdom": "^21.1.7",
     "@types/mithril": "^2.2.7",
     "@types/node": "^24.0.10",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
+    "happy-dom": "^18.0.1",
+    "jsdom": "^26.1.0",
+    "mithril-query": "git+https://github.com/JodliDev/mithril-query",
     "rollup-plugin-node-externals": "^8.0.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "~5.8.3",
     "vite": "^7.0.0",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "@solana/spl-memo": "^0.2.5",
