--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@happy-dom/global-registrator": "^18.0.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/better-sqlite3": "^7.6.13",
     "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.3",
@@ -38,11 +39,13 @@
   "dependencies": {
     "@solana/spl-memo": "^0.2.5",
     "@solana/web3.js": "^1.98.2",
+    "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.2.0",
     "cookie-parser": "^1.4.7",
     "express": "^5.1.0",
     "kysely": "^0.28.2",
     "mithril": "^2.3.3",
+    "sqlmorpheus": "^0.1.4",
     "vite-express": "^0.21.1"
   }
 }
