--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@types/jsdom": "^21.1.7",
     "@types/mithril": "^2.2.7",
     "@types/node": "^24.0.10",
+    "@types/supertest": "^6.0.3",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "happy-dom": "^18.0.1",
     "jsdom": "^26.1.0",
     "mithril-query": "git+https://github.com/JodliDev/mithril-query",
     "rollup-plugin-node-externals": "^8.0.1",
+    "supertest": "^7.1.4",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "~5.8.3",
