Fix project splitting in tsconfig

--- a/src/frontend/tsconfig.json
+++ b/src/frontend/tsconfig.json
@@ -3,6 +3,9 @@
 	"compilerOptions": {
 		"module": "ESNext",
 		"moduleResolution": "Bundler",
+		"lib": ["ES2022", "DOM", "DOM.Iterable"],
+		"isolatedModules": true,
+		"composite": true
 	},
 	"include": ["./", "../shared"],
 }
