Rework ViewQuestionnaireData page and change data format from JSON to CSV

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/better-sqlite3": "^7.6.13",
     "@types/cookie-parser": "^1.4.9",
+    "@types/diff": "^7.0.2",
     "@types/express": "^5.0.3",
     "@types/jsdom": "^21.1.7",
     "@types/mithril": "^2.2.7",
@@ -44,6 +45,7 @@
     "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.2.0",
     "cookie-parser": "^1.4.7",
+    "diff": "^8.0.2",
     "express": "^5.1.0",
     "kysely": "^0.28.2",
     "mithril": "^2.3.3",
