--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -18,12 +18,12 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
       
       - name: Create tag
-        uses: butlerlogic/action-autotag@1.1.2
+        uses: butlerlogic/action-autotag@1.1.4
         id: autotag
         env:
             GITHUB_TOKEN: "${{secrets.GITHUB_TOKEN}}"
@@ -33,11 +33,15 @@ jobs:
       
       - name: Install Dependencies
         if: ${{steps.autotag.outputs.tagcreated == 'yes'}}
-        run: npm install
+        run: npm ci
       
+      - name: Run Tests
+        if: ${{steps.autotag.outputs.tagcreated == 'yes'}}
+        run: npm test
+        
       - name: Build for production
         if: ${{steps.autotag.outputs.tagcreated == 'yes'}}
-        run: npm run prepare_dist & webpack --config webpack_config/build.production.js
+        run: npm run build
       
       - name: Log in to Docker Hub
         if: ${{steps.autotag.outputs.tagcreated == 'yes'}}
@@ -62,6 +66,18 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            jodlidev/scidataseal:${{steps.autotag.outputs.tagname}}
-            jodlidev/scidataseal:latest
+            ${{env.DOCKER_REGISTRY}}/${{env.DOCKER_IMAGE_NAME}}:${{steps.autotag.outputs.tagname}}
+            ${{env.DOCKER_REGISTRY}}/${{env.DOCKER_IMAGE_NAME}}:latest
           labels: ${{steps.meta.outputs.labels}}
+      
+      - name: Create named release
+        if: ${{ steps.autotag.outputs.tagcreated == 'yes' }}
+        uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          name: Release version ${{ steps.autotag.outputs.version }}
+          tag_name: v${{ steps.autotag.outputs.version}}
+          generate_release_notes: true
+          append_body: true
+          body_path: CHANGELOG.md
