--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -22,43 +22,44 @@ jobs:
         with:
           node-version: 22
       
-      - name: Create tag
-        uses: butlerlogic/action-autotag@1.1.2
-        id: autotag
-        env:
-            GITHUB_TOKEN: "${{secrets.GITHUB_TOKEN}}"
+      - name: Get package version
+        id: package-version
+        uses: martinbeentjes/npm-get-version-action@v1.3.1
+      
+      - name: Check if release exists
+        uses: f2calv/gha-check-release-exists@v2
         with:
-            strategy: package
-            tag_prefix: "v"
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          ReleaseName: ${{steps.package-version.outputs.current-version}}
       
       - name: Install Dependencies
-        if: ${{steps.autotag.outputs.tagcreated == 'yes'}}
+        if: ${{steps.check-release-exists.outputs.ReleaseExists == 'false'}}
         run: npm ci
       
       - name: Run Tests
-        if: ${{steps.autotag.outputs.tagcreated == 'yes'}}
+        if: ${{steps.check-release-exists.outputs.ReleaseExists == 'false'}}
         run: npm run prepare_dev & npm test
         
       - name: Build for production
-        if: ${{steps.autotag.outputs.tagcreated == 'yes'}}
+        if: ${{steps.check-release-exists.outputs.ReleaseExists == 'false'}}
         run: npm run build
       
       - name: Log in to Docker Hub
-        if: ${{steps.autotag.outputs.tagcreated == 'yes'}}
+        if: ${{steps.check-release-exists.outputs.ReleaseExists == 'false'}}
         uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
         with:
           username: ${{secrets.DOCKER_USERNAME}}
           password: ${{secrets.DOCKER_PASSWORD}}
       
       - name: Extract metadata (tags, labels) for Docker
-        if: ${{steps.autotag.outputs.tagcreated == 'yes'}}
+        if: ${{steps.check-release-exists.outputs.ReleaseExists == 'false'}}
         id: meta
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
           images: ${{env.DOCKER_REGISTRY}}/${{env.DOCKER_IMAGE_NAME}}
       
       - name: Build and push Docker image
-        if: ${{steps.autotag.outputs.tagcreated == 'yes'}}
+        if: ${{steps.check-release-exists.outputs.ReleaseExists == 'false'}}
         id: push
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
@@ -66,18 +67,18 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            ${{env.DOCKER_REGISTRY}}/${{env.DOCKER_IMAGE_NAME}}:${{steps.autotag.outputs.tagname}}
+            ${{env.DOCKER_REGISTRY}}/${{env.DOCKER_IMAGE_NAME}}:${{steps.package-version.outputs.current-version}}
             ${{env.DOCKER_REGISTRY}}/${{env.DOCKER_IMAGE_NAME}}:latest
           labels: ${{steps.meta.outputs.labels}}
       
       - name: Create named release
-        if: ${{ steps.autotag.outputs.tagcreated == 'yes' }}
+        if: ${{steps.check-release-exists.outputs.ReleaseExists == 'false'}}
         uses: softprops/action-gh-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         with:
-          name: Release version ${{ steps.autotag.outputs.version }}
-          tag_name: v${{ steps.autotag.outputs.version}}
+          name: Release version ${{steps.package-version.outputs.current-version}}
+          tag_name: v${{steps.package-version.outputs.current-version}}
           generate_release_notes: true
           append_body: true
           body_path: CHANGELOG.md
