--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
+    "@solana/kit": "^3.0.2",
     "@solana/spl-memo": "^0.2.5",
     "@solana/web3.js": "^1.98.4",
     "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.2.0",
+    "bip39": "^3.1.0",
     "cookie-parser": "^1.4.7",
     "diff": "^8.0.2",
     "express": "^5.1.0",
